# tow-truck-object-detection

./: .gitignore  README.md  config.py  main.py  pyproject.toml  train.py
