[tool.poetry]
name = "tow-truck-object-detection"
version = "0.1.0"
description = ""
authors = ["David <34923485+Haste171@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.75"
clearml = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
